Updated user commands
